# DCIRDrop

./: CMakeLists.txt  Doxyfile  README  contributors.txt
DCIRDrop/: CMakeLists.txt
cem_CMake/: CEM.cmake  CEMCommon.cmake  Linux.cmake
doc/: .~lock.Mesh.odp#  Mesh.odp
external_libraries/gtest-1.7.0/make/: sample1_unittest
src/cemCommon/: CMakeLists.txt  cemConsts.h  cemError.cpp  cemTypes.h  cemUtils.cpp  cemUtils.h  cemerror.cpp  cemerror.h  cemspace.h
src/cemCore/: CMakeLists.txt
src/cemCore/BasisFunctions/: BasisFunctions.cpp  BasisFunctions.h
src/cemCore/Quadrature/: Quadrature.cpp  Quadrature.h
src/cemCore/SolverMesh/: SolverElement.cpp  SolverElement.h
src/cemMath/: CMakeLists.txt
src/cemMath/MKL/: BlasLevel1.cpp  BlasLevel1.h
src/cemMath/Matrix/: DenseMatrix.cpp  DenseMatrix.h  Matrix.h
src/cemMath/SpecialFunctions/: MiscFunctions.cpp  MiscFunctions.h
src/cemMesh/: CMakeLists.txt  Element.cpp  Element.h  cemMesh.cpp  cemMesh.h  element.h
src/cemProducts/TestSuite/: CMakeLists.txt  TestSuite.cpp  testcasedeclarations.h
src/cemProducts/TestSuite/TestBasisFunctions/: test_BasisFunctions.cpp  test_BasisFunctions.h
src/cemProducts/TestSuite/TestCEMMath/: test_cemMath.cpp  test_cemMath.h
src/cemProducts/TestSuite/TestCEMMesh/: test_cemMesh.cpp  test_cemMesh.h
src/cemProducts/TestSuite/TestCEMSpace/: testcemspace.cpp  testcemspace.h
src/cemProducts/TestSuite/TestIntegration/: test_Integration.cpp  test_Integration.h
src/cemProducts/TestSuite/TestSolverMesh/: test_SolverElement.cpp  test_SolverElement.h
src/cemProducts/cemDCIRDrop/: CMakeLists.txt  main.cpp
