cmake_minimum_required(VERSION 2.8)

SET( LIB_TYPE "SHARED" CACHE STRING "Static or Shared libraries generated [STATIC|SHARED]" )
SET( CEM_ROOT ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "PWD" )
SET( EXTERNAL_LIBS_DIR )
SET( LIB_DIR "${CEM_ROOT}/lib/${CMAKE_BUILD_TYPE}/${LIB_TYPE}" )
SET( BIN_DIR "${CEM_ROOT}/bin/${CMAKE_BUILD_TYPE}/${LIB_TYPE}")

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR} )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_DIR} )
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR} )

PROJECT(CEM)
INCLUDE( ${CEM_ROOT}/cem_CMake/CEM.cmake )

# Include directories:
INCLUDE_DIRECTORIES( ${EXTERNAL_LIBS_DIR} )
INCLUDE_DIRECTORIES( ${CEM_ROOT}/src/cemCommon )
INCLUDE_DIRECTORIES( ${CEM_ROOT}/src/cemCore )
INCLUDE_DIRECTORIES( ${CEM_ROOT}/src/cemMesh )
INCLUDE_DIRECTORIES( ${CEM_ROOT}/src/cemMath )

# Binaries:
ADD_SUBDIRECTORY( src/cemProducts/cemDCIRDrop )
ADD_SUBDIRECTORY( src/cemProducts/TestSuite )

# Sources:
ADD_SUBDIRECTORY( src/cemCommon )
ADD_SUBDIRECTORY( src/cemCore )
ADD_SUBDIRECTORY( src/cemMesh )
ADD_SUBDIRECTORY( src/cemMath )

#EOF
