cmake_minimum_required(VERSION 2.8)

# Project Name:
SET( LIB_NAME cemCore )
PROJECT( ${LIB_NAME} )

# Source Files:
AUX_SOURCE_DIRECTORY( ./ SRC_FILES )
FILE( GLOB_RECURSE HDR_FILES ./*.h )

# Library Name:
ADD_LIBRARY( ${LIB_NAME} ${LIB_TYPE} ${SRC_FILES} ${HDR_FILES} )
SET_PROPERTY( TARGET ${LIB_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION ${USE_IPO} )

#EOF
